# nsga2_cuda

./: CMakeLists.txt  README.md
include/: global.h  global_cuda.cuh  rand.h  rand_cuda.cuh
src/: allocate.cpp  allocate_cuda.cu  crossover.cpp  crowd_dist.cpp  crowddist.cpp  display.cpp  dominance.cpp  dominance_cuda.cu  eval.cpp  eval_cuda.cu  fill_cuda.cu  fillnds.cpp  initialize.cpp  initialize_cuda.cu  list.cpp  mem_manag.cpp  mem_manag_cuda.cu  merge.cpp  merge_cuda.cu  mutation.cpp  mutation_cuda.cu  nsgaII.cpp  problemdef.cpp  problemdef_cuda.cu  qsort.cpp  qsort_cuda.cu  rand.cpp  rand_cuda.cu  rank.cpp  rank_cuda.cu  report.cpp  selection.cpp  selection_cuda.cu  sort.cpp  tourselect.cpp
tmp/: tournament_realcross_versions.txt
